[package]
name = "axum_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
redis = "0.26"
deadpool-redis = "0.10"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
once_cell = "1.10.0"